[gd_scene load_steps=5 format=3 uid="uid://jgqfb3u84kw0"]

[ext_resource type="Texture2D" uid="uid://c35wy5s7tfhxg" path="res://images/bomb.png" id="1_bqivc"]
[ext_resource type="Script" path="res://scenes/weapons/projectiles/time_bomb.gd" id="1_qhmay"]
[ext_resource type="Texture2D" uid="uid://lggnikojqdmc" path="res://images/circle-empty.png" id="3_oasme"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wnru2"]
radius = 32.0

[node name="time_bomb" type="Node2D"]
script = ExtResource("1_qhmay")

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_wnru2")

[node name="RangeVisual" type="Sprite2D" parent="."]
modulate = Color(0.643137, 0.0431373, 0.0745098, 1)
scale = Vector2(0.31, 0.31)
texture = ExtResource("3_oasme")

[node name="BombVisual" type="Sprite2D" parent="."]
scale = Vector2(0.375, 0.375)
texture = ExtResource("1_bqivc")

[node name="TimeBombTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_damage_area_body_exited"]
[connection signal="timeout" from="TimeBombTimer" to="." method="_on_time_bomb_timer_timeout"]
